2014-04-23  Peter Stephenson  <p.w.stephenson@ntlworld.com>

	* Sebastien Alaiwan: 32562: Completion/Unix/Command/_bzr:
	updates for bzr completion.

	* Jasper Lievisse Adriaanse: 32558: configure.ac:
	_XOPEN_SOURCE_EXTENDED now works OK on OpenBSD.

2014-04-25  Barton E. Schaefer  <schaefer@zsh.org>

	* 32580: Src/hist.c: avoid indefinite wait in lockhistfile() by
	checking for lock file time stamp far in the future relative to
	the local clock.  Change behavior of HIST_FCNTL_LOCK to use only
	fcntl() locking, rather than applying both kinds of lock.

2014-04-20  Barton E. Schaefer  <schaefer@zsh.org>

	* 32569: Src/loop.c: lastval ($?) should not be reset between
	word list substitution and loop body execution in for/select.

	* 32568: Src/exec.c, Src/loop.c: consistency in handling of errflag
	condition during substitutions in for/select word lists, function
	definition name position, and anonymous function argument lists.

2014-04-17  Barton E. Schaefer  <schaefer@zsh.org>

	* Andrew Waldron: 32552 (updated by 32560): Src/exec.c,
	Src/parse.c, Src/subst.c, Test/C04funcdef.ztst:  fix segfault
	when using process substitution in anonymous function argument
	list; disallow process substitution in function name position.

2014-04-15  Barton E. Schaefer  <schaefer@zsh.org>

	* Jun T: 32546: Completion/Unix/Type/_path_files: better handling
	of ignored files when using -W to specify prefixes.

2014-04-13  Barton E. Schaefer  <schaefer@zsh.org>

	* 32540: Src/Zle/zle_tricky.c, Src/Zle/zle_utils.c: following
	successful history expansion, discard saved line position data
	rather than restoring from it (updates 32531).

2014-04-07  Peter Stephenson  <p.stephenson@samsung.com>

	* 32527: Doc/Zsh/contrib.yo, Functions/Misc/zcalc,
	Functions/Zle/zcalc-auto-insert: zcalc-auto-insert widget
	for key binding in zcalc.

2014-04-06  Barton E. Schaefer  <schaefer@zsh.org>

	* unposted: Doc/Zsh/options.yo: fix typo in option cross-reference
